# FUSES

./: .gitignore  CMakeLists.txt  README.md
OpenGM_external/MaxFlow-v3.02.src-patched/: graph.cpp  instances.inc  maxflow.cpp
OpenGM_external/TRWS-v1.3.src-patched/: MRFEnergy.cpp  MRFEnergy.h  example.cpp  instances.inc  minimize.cpp  typeGeneral.h
OpenGM_external/patches/: CMakeLists.txt
bonnet/example/: example_bonnet.cpp
bonnet/frozen_1024/: events.out.tfevents.1529804070.siyi-Precision-7920-Tower  events.out.tfevents.1529804076.siyi-Precision-7920-Tower  model.ckpt.index  model.pbtxt  quantized.pb  train.yaml
bonnet/frozen_512/: events.out.tfevents.1543797156.siyi-Precision-7920-Tower  events.out.tfevents.1543797163.siyi-Precision-7920-Tower  model.ckpt.index  model.pbtxt  nodes.yaml  quantized.pb  train.yaml
bonnet/frozen_768/: data.yaml  events.out.tfevents.1533564306.siyi-Precision-7920-Tower  model.ckpt.index  model.pbtxt  net.yaml  nodes.yaml  train.yaml
bonnet/include/: IDToLabelConst.h  bonnet.hpp  net.hpp  netTRT.hpp
bonnet/src/: bonnet.cpp  netTRT.cpp
cmake_extensions/: FUSESConfig.cmake.in  FindBonnet.cmake  FindHDF5.cmake  FindOpengm.cmake
examples/: CMakeLists.txt  fuses-bonnet-Cityscapes.cpp  fuses-bonnet-batch.cpp  fuses-example-bonnet.cpp
examples/backend-scripts/: CMakeLists.txt  belief-propagation-LBP.cpp  belief-propagation-TRWS.cpp  expansion-move-alphaExpansion.cpp  optimization-FUSES-DA.cpp  optimization-FUSES.cpp  optimization-FUSES2-DA.cpp  optimization-FUSES2.cpp
examples/deprecated/: frontend-DAVIS-hdf5.cpp  fuses-example-test.cpp
examples/frontend-scripts/: CMakeLists.txt  frontend-bonnet-hdf5-fitting.cpp  frontend-bonnet-hdf5-gtBinary.cpp  frontend-bonnet-hdf5-gtSP.cpp  frontend-bonnet-hdf5-scalability.cpp  frontend-bonnet-hdf5-test.cpp  frontend-bonnet-hdf5.cpp  frontend-removeNegative-hdf5.cpp  frontend-rewrite-hdf5.cpp
examples/test-scripts/: CMakeLists.txt  frontend-bonnet-computeAccuracy.cpp  frontend-bonnet-fittingBeta.cpp  fuses-fittingBeta.cpp  superpixel-test.cpp
matlab/: cvx_runtime.m  disp_Fuses2DA_Fuses.m  evaluateSuperpixel.m  fitBeta_Cityscapes.m  fitLambda_Cityscapes.m  generateBonnetAccuracy.m  generateFusesPlots.m  generateOptimizationResults.m  generateOptimizationResults_adj.m  generateOptimizationResults_gtBinary.m  generateOptimizationResults_gtSP.m  generateOptimizationResults_rand.m  superpixelAccuracy.m  testFuses.m  testOptimization.m  timingResultsBeforeTimingMeasurements.m
matlab/lib/: computeAccuracy.m  computeAccuracyfromMatrix.m  computeExact.m  computeSDP.m  evaluate.m  getConstraints.m  getUnaryFactorAccuracy.m  reduceNrClasses.m
matlab/parameter_tuning/: main.m  main_1.m  main_2.m  main_3.m  main_4.m
matlab/parameter_tuning/lib/: CityscapesParser.m  DAVISParser.m  binaryTermsCompact.m  computeMultiClassSeg.m  findConnectivity.m  getCandF.m  getEstimatedLabels.m  getGroundTruth.m  getQ2.m  getQandZ.m  getSPintensities.m  getSegmentedImage.m  plotGroundTruth.m  solverCPLEX.m  solverManopt.m  solverSDPcompact.m
optimization/: CMakeLists.txt
optimization/examples_opt/: CMakeLists.txt
optimization/include/Optimization/Smooth/: TNT.h
src/: Fuses.cpp  Fuses2.cpp  SegmentationFrontEnd.cpp  StiefelMixedProduct.cpp  StiefelProduct.cpp
src/include/FUSES/: CRF.h  CityscapesParser.h  Fuses.h  Fuses2.h  Fuses2DA.h  FusesBase.h  FusesDA.h  OpenGMParser.h  SegmentationFrontEnd.h  SegmentationFrontEndParams.h  StiefelMixedProduct.h  StiefelProduct.h  Timer.h  UtilsFuses.h  UtilsGM.h
src/include/deprecated/: DavisParser.h  Stanford3DSemanticParser.h
tests/: CMakeLists.txt  testCRF.cpp  testFuses.cpp  testFuses2.cpp  testFuses2DA.cpp  testFusesDA.cpp  testOpenGMParser.cpp  testSegmentationFrontEnd.cpp  testSegmentationFrontEndParams.cpp  testStiefelMixedProduct.cpp  testStiefelProduct.cpp  testUtilsGM.cpp
tests/data/: 3096.bmp.h5  fusesParameters-fitting.yaml  fusesParameters.yaml  fusesParameters_default.yaml  negativeCRF.csv  negativeCRFfile.hdf5  test.csv  test1.csv  test2.csv  test3.csv  test4.csv  test_labels.csv  test_labels1.csv  toyCRFfile.hdf5  train100Data.csv  train100Result.csv  train1500Data.csv  train200Data.csv  train200Result.csv  train500Data.csv  train500Result.csv  train800Data.csv
tests/deprecated/: testSegmentationBackEnd.cpp
